--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/imageMapping.plist
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/imageMapping.plist
@@ -125,7 +125,7 @@
 	<key>pp_logo_805</key>
 	<string>templates/master/global/css/img/ppimages/pp_logo_805_v1.png</string>
 	<key>pp_logo_806</key>
-	<string>templates/master/global/css/img/ppimages/pp_logo_806_v2.png</string>
+	<string>templates/master/global/css/img/ppimages/pp_logo_806_v4.png</string>
 	<key>pp_logo_809</key>
 	<string>templates/master/global/css/img/ppimages/pp_logo_809_v2.png</string>
 	<key>pp_logo_810</key>
@@ -152,6 +152,8 @@
 	<string>templates/master/global/css/img/ppimages/pp_logo_864_v1.png</string>
 	<key>pp_logo_865</key>
 	<string>templates/master/global/css/img/ppimages/pp_logo_865_v2.png</string>
+	<key>pp_logo_866</key>
+	<string>templates/master/global/css/img/ppimages/pp_logo_866_v1.png</string>
 	<key>pp_logo_869</key>
 	<string>templates/master/global/css/img/ppimages/pp_logo_869_v1.png</string>
 	<key>pp_logo_870</key>
